# rust-simd-noise

./: .gitignore  .gitmodules  Cargo.toml
benches/: benchmarks.rs
crsnoise/: Cargo.toml
crsnoise/src/: lib.rs  main.rs
example/: Cargo.toml
example/.cargo/: config.toml
example/src/: lib.rs  main.rs
src/: lib.rs  noise_builder.rs  noise_dimensions.rs  noise_helpers_32.rs  noise_helpers_64.rs  noise_type.rs  shared.rs
src/intrinsics/: avx2.rs  mod.rs  scalar.rs  sse2.rs  sse41.rs
src/noise/: fbm_32.rs  fbm_64.rs  gradient_32.rs  gradient_64.rs  mod.rs  simplex_32.rs  simplex_64.rs
src/settings/: fbm_settings.rs  gradient_settings.rs  mod.rs
tests/: helpers.rs  intrinsics.rs  noisebuilder.rs
