[package]
exclude = ["*.jpg"]
name = "cursednoise"
version = "3.1.7"
authors = ["ah-OOG-ah", "Jack Mott <jack.mott@gmail.com>"]
description = "SIMD accelerate noise library with runtime feature detection"
license = "LGPL-3.0-or-later"
documentation = "https://docs.rs/simdnoise/"
readme = "README.md"
keywords = ["SIMD", "noise", "simplex", "perlin", "performance"]
repository = "https://github.com/ah-OOG-ah/rust-simd-noise"
categories = ["game-engines", "multimedia::images"]
edition = "2024"
publish = false

[dependencies]
simdeez = { path = "simdeez", features = ["no_std"] }

[dev-dependencies]
criterion = "0.4.0"
byteorder = "1.4.3"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
