[package]
exclude = ["*.jpg"]
name = "cursednoise"
version = "3.1.7"
authors = ["ah-OOG-ah", "Jack Mott <jack.mott@gmail.com>"]
description = "AVX2-accelerated noise library"
license = "LGPL-3.0-or-later"
documentation = "https://docs.rs/simdnoise/"
readme = "README.md"
keywords = ["SIMD", "noise", "simplex", "perlin", "performance"]
repository = "https://github.com/ah-OOG-ah/rust-simd-noise"
categories = ["game-engines", "multimedia::images"]
edition = "2024"
publish = false

[dependencies]
simdeez = { path = "simdeez" }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"
