[package]
name = "cursednoise-example"
version = "0.0.1"
authors = ["ah-OOG-ah"]
description = "Example app that uses cursed noise"
license = "LGPL-3.0-or-later"
repository = "https://github.com/ah-OOG-ah/rust-simd-noise"
categories = ["game-engines", "multimedia::images"]
edition = "2024"


[dependencies]
cursednoise = { path = ".." }
