[package]
name = "cursednoise-example"
version = "0.0.1"
authors = ["ah-OOG-ah"]
description = "Example app that uses cursed noise"
license = "LGPL-3.0-or-later"
repository = "https://github.com/ah-OOG-ah/rust-simd-noise"
categories = ["game-engines", "multimedia::images"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
cursednoise = { path = ".." }
libc-print = "0.1.23"

[profile.dev]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
